added questions and answers, added state function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>HighScores</h1>
-        <time>Time Left: </time>
+        <time id="timer">Time Left: </time>
     </header>
 
     <main>
