redid how questions were set up

--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     <title>JavaScript Code Quiz</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <button id="hsbutton">HighScores</button>
-        <time id="timer">Time Left: </time>
+      <button id="hsbutton">HighScores</button>
+      <time id="timer">Time Left: </time>
     </header>
 
     <main>
-        <section id="home">
-            <h2>JavaScript Code Quiz</h2>
-            <button id="start">Start Quiz</button>
-        </section>
+      <section id="home">
+        <h2>JavaScript Code Quiz</h2>
+        <button id="start">Start Quiz</button>
+      </section>
 
-        <section id="quiz">
-            <h2>JavaScript Code Quiz</h2>
-            <div id="questions"></div>
-        </section>
+      <section id="quiz">
+        <h2>JavaScript Code Quiz</h2>
+        <div id="questions"></div>
+      </section>
 
-        <section id="end">
-            <h2>HighScores</h2>
-            <input id="initialsHS" type="text" placeholder="Enter Initials" />
-            <button id="submitHS">Submit</button>
-        </section>
+      <section id="end">
+        <h2>HighScores</h2>
+        <input id="initialsHS" type="text" placeholder="Enter Initials" />
+        <button id="submitHS">Submit</button>
+      </section>
 
-        <section id="highscore">
-            <h2>HighScores</h2>
-        </section>
+      <section id="highscore">
+        <h2>HighScores</h2>
+      </section>
     </main>
-    <script src="./script.js" ></script>
-</body>
-
+    <script src="./script.js"></script>
+  </body>
 </html>
