--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
 
   <body>
-    <header>
-      <button id="hsbutton">HighScores</button>
-      <time id="timer">Time Left: </time>
-    </header>
-
     <main>
+      <section>
+        <button id="hsbutton">HighScores</button>
+        <time id="timer">Time Left: </time>
+      </section>
+
       <section id="home">
         <h2>JavaScript Code Quiz</h2>
         <button id="start">Start Quiz</button>
@@ -22,7 +22,14 @@
 
       <section id="quiz">
         <h2>JavaScript Code Quiz</h2>
-        <div id="questions"></div>
+        <h1 id="question"></h1>
+        <div id="choices">
+          <button class="choice" id="choice1">placeholder</button>
+          <button class="choice" id="choice2">placeholder</button>
+          <button class="choice" id="choice3">placeholder</button>
+          <button class="choice" id="choice4">placeholder</button>
+        </div>
+        <div id="result"></div>
       </section>
 
       <section id="end">
@@ -35,6 +42,7 @@
         <h2>HighScores</h2>
       </section>
     </main>
+
     <script src="./script.js"></script>
   </body>
 </html>
