--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <section>
         <button id="hsbutton">HighScores</button>
-        <time id="timer">Time Left: </time>
+        <h1 id="timer">Time Left: </h1>
       </section>
 
       <section id="home">
@@ -21,8 +21,7 @@
       </section>
 
       <section id="quiz">
-        <h2>JavaScript Code Quiz</h2>
-        <h1 id="question"></h1>
+        <h2 id="question"></h2>
         <div id="choices">
           <button class="choice" id="choice1">placeholder</button>
           <button class="choice" id="choice2">placeholder</button>
@@ -40,6 +39,7 @@
 
       <section id="highscore">
         <h2>HighScores</h2>
+        <ol id="hsList"></ol>
       </section>
     </main>
 
