set some styles

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
 
   <body>
-    <main>
-      <section>
-        <button id="hsbutton">HighScores</button>
-        <h1 id="timer">Time Left: </h1>
-      </section>
+    <header>
+      <button id="hsbutton">HighScores</button>
+      <h2 id="title">JavaScript Code Quiz</h2>
+      <h1 id="timer">Time Left:</h1>
+    </header>
 
+    <main>
       <section id="home">
-        <h2>JavaScript Code Quiz</h2>
         <button id="start">Start Quiz</button>
       </section>
 
