--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <ol id="hsList"></ol>
       </section>
     </main>
-
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
