questions show up, timer doesnt work, and when quiz ends you are not sent to hs page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <button class="choice" id="choice3">placeholder</button>
           <button class="choice" id="choice4">placeholder</button>
         </div>
-        <div id="result"></div>
+        <div id="result">placeholder</div>
       </section>
 
       <section id="end">
@@ -42,7 +42,7 @@
         <ol id="hsList"></ol>
       </section>
     </main>
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
