added styles to questions

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
       </section>
 
       <section id="quiz">
-        <h2 id="question"></h2>
-        <div id="choices">
-          <button class="choice" id="choice1">placeholder</button>
-          <button class="choice" id="choice2">placeholder</button>
-          <button class="choice" id="choice3">placeholder</button>
-          <button class="choice" id="choice4">placeholder</button>
+        <div id="quizSection">
+          <h2 id="question"></h2>
+          <div id="choices">
+            <button class="choice" id="choice1">placeholder</button>
+            <button class="choice" id="choice2">placeholder</button>
+            <button class="choice" id="choice3">placeholder</button>
+            <button class="choice" id="choice4">placeholder</button>
+          </div>
+          <div id="result">placeholder</div>
         </div>
-        <div id="result">placeholder</div>
       </section>
 
       <section id="end">
