--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
       </section>
 
       <section id="end">
-        <h2>HighScores</h2>
-        <input id="initialsHS" type="text" placeholder="Enter Initials" />
-        <button id="submitHS">Submit</button>
+        <form id="enterHS">
+          <h2>HighScores</h2>
+          <input id="initialsHS" type="text" name="initials" placeholder="Enter Initials" />
+          <button id="submitHS">Submit</button>
+        </form>
       </section>
 
       <section id="highscore">
