--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
       </section>
 
       <section id="end">
-        <form id="enterHS">
+        <form id="submitForm">
           <h2>HighScores</h2>
-          <input id="initialsHS" type="text" name="initials" placeholder="Enter Initials" />
+          <input
+            id="initialsHS"
+            type="text"
+            name="initials"
+            placeholder="Enter Initials"
+          />
           <button id="submitHS">Submit</button>
         </form>
       </section>
