--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <section id="highscore">
         <h2>HighScores</h2>
-        <ol id="hsList"></ol>
+        <ul id="hsList"></ul>
       </section>
     </main>
 
