--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             id="initialsHS"
             type="text"
             name="initials"
-            placeholder="Enter Initials"
+            placeholder="Enter Username"
           />
           <button id="submitHS">Submit</button>
         </form>
       </section>
 
       <section id="highscore">
-        <h2>HighScores</h2>
+        <h2 id="hsTitle">HighScores</h2>
         <ul id="hsList"></ul>
       </section>
     </main>
