home button on hs page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <section id="highscore">
         <h2 id="hsTitle">HighScores</h2>
         <ul id="hsList"></ul>
+        <button id="goHome">Home</button>
       </section>
     </main>
 
